--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -15,7 +15,7 @@
 \title{Big Data and basketball}
 
 
-\author{Junjie Lu}
+\author{Geng Niu}
 % \orcid{1234-5678-9012}
 \affiliation{%
   \institution{Indiana University Bloomington}
