--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -19,19 +19,19 @@
 % \orcid{1234-5678-9012}
 \affiliation{%
   \institution{Indiana University Bloomington}
-  \streetaddress{3322 John Hinkle Place}
+  \streetaddress{752 Woodbridge Dr}
   \city{Bloomington} 
   \state{Indiana} 
-  \postcode{43017-6221}
+  \postcode{47408}
 }
-\email{junjlu@iu.edu}
+\email{gengniu@iu.edu}
 
 % The default list of authors is too long for headers}
 % \renewcommand{\shortauthors}{B. Trovato et al.}
 
 
 \begin{abstract}
-This paper studies data analytic in match of basketball, and analyze actual performance in a different way.
+This paper studies how big data is applied in ecommerce and its influence on lifestyle.
 \end{abstract}
 
 \keywords{basketball, stats}
