--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -27,7 +27,7 @@
 \email{gengniu@iu.edu}
 
 % The default list of authors is too long for headers}
-% \renewcommand{\shortauthors}{B. Trovato et al.}
+% \renewcommand{\shortauthors}{Niu. G}
 
 
 \begin{abstract}
@@ -42,7 +42,10 @@ This paper studies how big data is applied in ecommerce and its influence on lif
 \section{Introduction}
 This is my introduction
 
+\subsection{Citations}
 
+Citations to articles~\cite{www.google.com}
+  
 \begin{acks}
 
   The authors would like to thank Dr. Yuhua Li for providing the
