--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,17 +1,20 @@
-%%%  BibTeX-file{
-%%%     author          = "Geng Niu",
-%%%     version         = "1.2",
-%%%     date            = "2 April 2012",
-%%%     filename        = "acmsmall-sample-bibfile.bib",
-%%%     address         = "ACM, NY",
-%%%     email           = "murray at hq.acm.org",
-%%%     codetable       = "ISO/ASCII",
-%%%     keywords        = "ACM Reference Format, bibliography, citation, references",
-%%%     supported       = "yes",
-%%%     docstring       = "This BibTeX database file contains 'bibdata' entries
-%%%                        that 'match' the examples provided in the Specifications Document
-%%%                        AND, also, 'legacy'-type bibs. It should assist authors in 
-%%%                        choosing the 'correct' at-bibtype and necessary bib-fields
-%%%                        so as to obtain the appropriate ACM Reference Format output. 
-%%%			   It also contains many 'Standard Abbreviations'. "
-%%%  }
+@Inbook{Editor00,
+  author = 	 "",
+  editor =       "Ian Editor",
+  title =        "Big data influence",
+  subtitle =     "The book subtitle",
+  series =       "The name of the series one",
+  year =         "2017",
+  volume = 	 "9",
+  address =      "Indiana",
+  edition =      "1st.",
+  publisher =    "University of Indiana press",
+  doi = 	 "10.1007/3-540-09237-4",
+  url = 	 "http://dx.doi.org/10.1007/3-540-09456-9",
+  chapter = 	 "",
+  pages = 	 "",
+  number = 	 "",
+  type = 	 "",
+  month = 	 "",
+  note = 	 "",
+}
