--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -1,20 +1,73 @@
-@Inbook{Editor00,
-  author = 	 "",
-  editor =       "Ian Editor",
-  title =        "Big data influence",
-  subtitle =     "The book subtitle",
-  series =       "The name of the series one",
-  year =         "2017",
-  volume = 	 "1",
-  address =      "Indiana",
-  edition =      "1st.",
-  publisher =    "University of Indiana press",
-  doi = 	 "10.1007/3-540-09237-4",
-  url = 	 "http://dx.doi.org/10.1007/3-540-09456-9",
-  chapter = 	 "",
-  pages = 	 "",
-  number = 	 "",
-  type = 	 "",
-  month = 	 "",
-  note = 	 "",
+@Article{Edosio2014,
+  author = {Uyoyo Zino Edosio},
+  title  = {Big Data Analytics and its application in E-commerce},
+  year   = {2014},
+}
+
+@Article{Patranabish2016,
+  author = {Durjoy Patranabish},
+  title  = {How Big Data is impacting the e-commerce industry},
+  year   = {2016},
+  url    = {https://yourstory.com/2016/11/big-data-impacting-e-commerce-industry/},
+}
+
+@Article{2008,
+  title = {History of Ecommerce},
+  year  = {2008},
+  url   = {http://www.ecommerce-land.com/history_ecommerce.html},
+}
+
+@Article{Akter2016,
+  author  = {Shahriar Akter and Samuel Fosso Wamba},
+  title   = {Big data analytics in E-commerce: a systematic review and agenda for future research},
+  journal = {Electronic Markets},
+  year    = {2016},
+  volume  = {26},
+}
+
+@Article{Chen2012,
+  author = {Hsinchun Chen and Roger H. L. Chiang and Veda C. Storey},
+  title  = {BUSINESS INTELLIGENCE AND ANALYTICS: FROM BIG DATA TO BIG IMPACT},
+  year   = {2012},
+}
+
+@Article{Linden2003,
+  author = {Greg Linden and Brent Smith and Jeremy York},
+  title  = {Amazon.com Recommendations Item-to-Item Collaborative Filtering},
+  year   = {2003},
+}
+
+@Article{Krawiec2017,
+  author = {Tom Krawiec},
+  title  = {The Amazon Recommendations Secret to Selling More Online},
+  year   = {2017},
+  url    = {http://rejoiner.com/resources/amazon-recommendations-secret-selling-online/},
+}
+
+@Article{Smyth2015,
+  author = {Brian Smyth},
+  title  = {Dynamic Pricing and Price Discrimination: What’s the Difference?},
+  year   = {2015},
+  url    = {http://blog.wiser.com/dynamic-pricing-and-price-discrimination-whats-the-difference/},
+}
+
+@Article{Bertulli2017,
+  author = {Matthew Bertulli},
+  title  = {5 Dynamic Pricing Strategies for eCommerce Growth},
+  year   = {2017},
+  url    = {https://www.demacmedia.com/dynamic-pricing-strategies-ecommerce/},
+}
+
+@Article{Wikipedia2017a,
+  author = {Wikipedia},
+  title  = {Text mining},
+  year   = {2017},
+  url    = {https://en.wikipedia.org/wiki/Text_mining},
+}
+
+@Article{Wikipedia2017,
+  author = {Wikipedia},
+  title  = {Dynamic Pricing},
+  year   = {2017},
+  url    = {https://en.wikipedia.org/wiki/Dynamic_pricing},
 }
