--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -72,7 +72,7 @@ With the spread of mobile phones and laptops and affordable high-speed internet,
 
 \bibliographystyle{ACM-Reference-Format}
 
-\bibliography{main} 
+\bibliography{report} 
 
 
 \end{document}
