--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -41,27 +41,27 @@ Big data has become the buzz words in recent years and it exerts huge influence 
 
 %here begins the body of the document
 \section{Introduction}
-People were used to get dressed well at weekends and drove or took public transportation to the centers of cities or towns to choose what they like in physical stores. However, this is never necessary with the rapid development of e-commerce driven by internet technologies and better logistics.  E-commerce became a buzz word about 15 years ago but it came into being in 1991 when internet started to be used for commercial purposes. ``At first, the term e-commerce meant the process of execution of transaction electronically. In 2000, the word e-commerce was redefined as the process of purchase of available goods and services over the internet.'' \cite{2008} This paper will focus on big data’s influence on the newer definition of e-commerce instead of the first one which is very broad.
+People were used to get dressed well at weekends and drove or took public transportation to the centers of cities or towns to choose what they like in physical stores. However, this is never necessary with the rapid development of e-commerce driven by internet technologies and better logistics.  E-commerce became a buzz word about 15 years ago but it came into being in 1991 when internet started to be used for commercial purposes. ``At first, the term e-commerce meant the process of execution of transaction electronically. In 2000, the word e-commerce was redefined as the process of purchase of available goods and services over the internet.'' \cite{2008}. This paper will focus on big data’s influence on the newer definition of e-commerce instead of the first one which is very broad.
 \section{The coming of the big data era}
-In the traditional mode of commerce, consumers need to go to physical stores and take time to look for products they want by walking. Companies manufacturing these products do commercials on TV and newspapers to attract potential consumers. This mode of doing business did not change in the beginning of e-commerce, and the difference is that sellers moved into virtual shops from a real shop. In the web 2.0 era, search engines enabled consumers to look for products in virtual shops and sellers can receive feedback in their website. \cite{Chen2012}
+In the traditional mode of commerce, consumers need to go to physical stores and take time to look for products they want by walking. Companies manufacturing these products do commercials on TV and newspapers to attract potential consumers. This mode of doing business did not change in the beginning of e-commerce, and the difference is that sellers moved into virtual shops from a real shop. In the web 2.0 era, search engines enabled consumers to look for products in virtual shops and sellers can receive feedback in their website\cite{Chen2012}.
 
-However, in the mobile and sensor-based era e-commerce is drastically changed. ``The number of mobile phones and tablets (about 480 million units) surpassed the number of laptops and PCs (about 380 million units) for the first time in 2011'' \cite{Chen2012} The wide spread of mobile devices and other sensor-based devices enables the gathering of huge volume of data which is fresher and more accurate compared with data gathered from surveys and questionnaires. ``In most cases, e-commerce firms deal with both structured and unstructured data. Whereas structured data focuses on demographic data including name, age, gender, date of birth, address, and preferences, unstructured data includes clicks, likes, links, tweets, voices, etc.''\cite{Akter2016} With huge and various data available and relevant technologies, the big data era came.
+However, in the mobile and sensor-based era e-commerce is drastically changed. ``The number of mobile phones and tablets (about 480 million units) surpassed the number of laptops and PCs (about 380 million units) for the first time in 2011'' \cite{Chen2012}. The wide spread of mobile devices and other sensor-based devices enables the gathering of huge volume of data which is fresher and more accurate compared with data gathered from surveys and questionnaires. ``In most cases, e-commerce firms deal with both structured and unstructured data. Whereas structured data focuses on demographic data including name, age, gender, date of birth, address, and preferences, unstructured data includes clicks, likes, links, tweets, voices, etc.''\cite{Akter2016}. With huge and various data available and relevant technologies, the big data era came.
 
 \section{Monitoring consumers' journey in online transaction}
-Big data analytics makes more data driven strategies for businesses to reach their consumers. With the use of data generated from Electronic Data Interchange, business runners can gain better understanding of consumer behavior so as to improve customer service and business strategies. Customers can be labeled into different segments or groups according to the patterns of their purchase online with their demographic information. By doing so, customers can be easily targeted especially during campaigns and festival sales because companies invest a lot to attract customers and retain existing base.\cite{Patranabish2016} For example, Amazon is providing more customized offers, advertisements and discounts to consumers because it can identify patterns in consumers' shopping habit which is enabled by analyzing cookies and clickstream on consumer browsers.\cite{Edosio2014}
+Big data analytics makes more data driven strategies for businesses to reach their consumers. With the use of data generated from Electronic Data Interchange, business runners can gain better understanding of consumer behavior so as to improve customer service and business strategies. Customers can be labeled into different segments or groups according to the patterns of their purchase online with their demographic information. By doing so, customers can be easily targeted especially during campaigns and festival sales because companies invest a lot to attract customers and retain existing base\cite{Patranabish2016}. For example, Amazon is providing more customized offers, advertisements and discounts to consumers because it can identify patterns in consumers' shopping habit which is enabled by analyzing cookies and clickstream on consumer browsers\cite{Edosio2014}.
 
-There are two technologies associated with the monitoring of consumers' journey online. One is text mining which relies on the use of text-based content from blogs and social media sites. Based on the information obtained, judgments on relevant issues can be made.\cite{Edosio2014} Text mining usually involves the process of structuring the input text, deriving patterns within the structured data, and finally evaluation and interpretation of the output.\cite{Wikipedia2017a} Another technology is sentiment analysis which is based on learning algorithm or artificial intelligence to make clear about attitudes to a particular good or service. The words obtained from the data will be will analyzed and tagged and then are interpreted whether the opinion is positive or not.\cite{Edosio2014}
+There are two technologies associated with the monitoring of consumers' journey online. One is text mining which relies on the use of text-based content from blogs and social media sites. Based on the information obtained, judgments on relevant issues can be made\cite{Edosio2014}. Text mining usually involves the process of structuring the input text, deriving patterns within the structured data, and finally evaluation and interpretation of the output\cite{Wikipedia2017a}. Another technology is sentiment analysis which is based on learning algorithm or artificial intelligence to make clear about attitudes to a particular good or service. The words obtained from the data will be will analyzed and tagged and then are interpreted whether the opinion is positive or not\cite{Edosio2014}.
 
 \section{Personalized services}
-Recommender systems or recommendation systems are also used by e-retailers to provide personalized services. Recommender system is a subclass of information filtering system that seeks to predict the ``ratin'' or ``preference'' that a user would give to an item. Recommender systems can generate recommendations in two ways. The first way is called collaborative filtering, which means a model from a user's past shopping behaviors including purchase records and ratings to given items as well as decisions made by other users will be built to generate recommendations. Another approach to build model is the content-based filtering. In this approach, a series of discrete characteristics of an item will be used to recommend additional items with similar properties.\cite{Linden2003}
+Recommender systems or recommendation systems are also used by e-retailers to provide personalized services. Recommender system is a subclass of information filtering system that seeks to predict the ``ratin'' or ``preference'' that a user would give to an item. Recommender systems can generate recommendations in two ways. The first way is called collaborative filtering, which means a model from a user's past shopping behaviors including purchase records and ratings to given items as well as decisions made by other users will be built to generate recommendations. Another approach to build model is the content-based filtering. In this approach, a series of discrete characteristics of an item will be used to recommend additional items with similar properties\cite{Linden2003}.
 
 Let's take Amazon as an example. 35\% of Amazon's revenue can be attributed to its recommendation engine. Amazon has on-site recommendations. When users click ``your recommendations'' link, they will see the products that the system recommends to them. Another way to recommend products is through the ``frequently bought together''. For instance, when a user is searching for a laptop he or she wants to buy, he or she probably sees that a backpack which can hold the laptop is recommended. Some other ways of providing recommendations is ``your browsing history'', ``related to items you've viewed'' and personal emails.\cite{Krawiec2017}
 
 \section{Dynamic Pricing}
-When customers are shopping online, there is an electronic seller bargaining with you. This technology is called dynamic pricing. ``Some business set different prices for their products or services based on algorithms that take into account competitor pricing, supply and demand and other external factors in the market. It is a common practice in industries such as hospitality, travel, entertainment, retail, electricity and public transport.''\cite{Wikipedia2017} 
-Amazon customers can receive different or customized prices or discounts for the same item. This is set by the resource planning system through the use of data of previous purchase, clicksteam, cookies and so on. CNN once reported that for a particular DVD, the price increased by \$ 2.5 after the customer deleted his cookies.\cite{Edosio2014}  Here are some strategies for dynamic pricing. The first one is high-value customer price which means that customers who always pay full price for a certain product or service rarely get information about promotion or discounts. Another strategies is based on demand and supply and the time. For example, a seller could price up the products like a coat in extreme weather because it is possibly very needed by people.\cite{Bertulli2017} 
+When customers are shopping online, there is an electronic seller bargaining with you. This technology is called dynamic pricing. ``Some business set different prices for their products or services based on algorithms that take into account competitor pricing, supply and demand and other external factors in the market. It is a common practice in industries such as hospitality, travel, entertainment, retail, electricity and public transport.''\cite{Wikipedia2017}. 
+Amazon customers can receive different or customized prices or discounts for the same item. This is set by the resource planning system through the use of data of previous purchase, clicksteam, cookies and so on. CNN once reported that for a particular DVD, the price increased by \$ 2.5 after the customer deleted his cookies\cite{Edosio2014}.  Here are some strategies for dynamic pricing. The first one is high-value customer price which means that customers who always pay full price for a certain product or service rarely get information about promotion or discounts. Another strategies is based on demand and supply and the time. For example, a seller could price up the products like a coat in extreme weather because it is possibly very needed by people\cite{Bertulli2017}.
 
-Although this function has its benefits such as increasing margin profits, customers may view it as price discrimination. However, there are some differences between dynamic price and price discrimination. Price discrimination happens when a sell changes the price of a product or service according to a consumer's demographics. In contrast dynamic price more focuses on price fluctuations in demand and competitive landscape.\cite{Smyth2015}
+Although this function has its benefits such as increasing margin profits, customers may view it as price discrimination. However, there are some differences between dynamic price and price discrimination. Price discrimination happens when a sell changes the price of a product or service according to a consumer's demographics. In contrast dynamic price more focuses on price fluctuations in demand and competitive landscape\cite{Smyth2015}.
 
 
 \section{Life changes}
