--- a/paper1/review.tex
+++ b/paper1/review.tex
@@ -25,14 +25,14 @@
 Big data has become the buzz words in recent years and it exerts huge influence on e-commerce and our lifestyle. However, for the general public big data is still something mysterious. This paper will serve as a review of what ways big data is utilized to improve e-commerce and influence our daily life.
 \end{abstract}
 
-\keywords{big data, ecommerce}
+\keywords{i523, hid 218, big data, ecommerce}
 
 
 \maketitle
 
 %here begins the body of the document
 \section{Introduction}
-People were used to get dressed well at weekends and drove or took public transportation to the centers of cities or towns to choose what they like in physical stores. However, this is never necessary with the rapid development of e-commerce driven by internet technologies and better logistics.  E-commerce became a buzz word about 15 years ago but it came into being in 1991 when internet started to be used for commercial purposes. ``At first, the term e-commerce meant the process of execution of transaction electronically. In 2000, the word e-commerce was redefined as the process of purchase of available goods and services over the internet.'' \cite{2008}. This paper will focus on big data’s influence on the newer definition of e-commerce instead of the first one which is very broad.
+People were used to get dressed well at weekends and drove or took public transportation to the centers of cities or towns to choose what they like in physical stores. However, this is never necessary with the rapid development of e-commerce driven by internet technologies and better logistics.  E-commerce became a buzz word about 15 years ago but it came into being in 1991 when internet started to be used for commercial purposes. ``At first, the term e-commerce meant the process of execution of transaction electronically. In 2000, the word e-commerce was redefined as the process of purchase of available goods and services over the internet.'' \cite{HistoryofEcommerce}. This paper will focus on big data’s influence on the newer definition of e-commerce instead of the first one which is very broad.
 \section{The coming of the big data era}
 In the traditional mode of commerce, consumers need to go to physical stores and take time to look for products they want by walking. Companies manufacturing these products do commercials on TV and newspapers to attract potential consumers. This mode of doing business did not change in the beginning of e-commerce, and the difference is that sellers moved into virtual shops from a real shop. In the web 2.0 era, search engines enabled consumers to look for products in virtual shops and sellers can receive feedback in their website\cite{Chen2012}.
 
