--- a/paper1/report.bib
+++ b/paper1/report.bib
@@ -2,6 +2,7 @@
   author = {Uyoyo Zino Edosio},
   title  = {Big Data Analytics and its application in E-commerce},
   year   = {2014},
+  month  = apr,
 }
 
 @Article{Patranabish2016,
@@ -11,10 +12,11 @@
   url    = {https://yourstory.com/2016/11/big-data-impacting-e-commerce-industry/},
 }
 
-@Article{2008,
-  title = {History of Ecommerce},
-  year  = {2008},
-  url   = {http://www.ecommerce-land.com/history_ecommerce.html},
+@Article{HistoryofEcommerce,
+  author = {Commercial-land},
+  title  = {History of Ecommerce},
+  year   = {2008},
+  url    = {http://www.ecommerce-land.com/history_ecommerce.html},
 }
 
 @Article{Akter2016,
@@ -23,18 +25,27 @@
   journal = {Electronic Markets},
   year    = {2016},
   volume  = {26},
+  pages   = {4-8},
 }
 
 @Article{Chen2012,
-  author = {Hsinchun Chen and Roger H. L. Chiang and Veda C. Storey},
-  title  = {BUSINESS INTELLIGENCE AND ANALYTICS: FROM BIG DATA TO BIG IMPACT},
-  year   = {2012},
+  author  = {Hsinchun Chen and Roger H. L. Chiang and Veda C. Storey},
+  title   = {BUSINESS INTELLIGENCE AND ANALYTICS: FROM BIG DATA TO BIG IMPACT},
+  journal = {MIS QUARTERLY},
+  year    = {2012},
+  volume  = {36},
+  number  = {NO.4},
+  pages   = {1168-1169},
+  month   = dec,
 }
 
 @Article{Linden2003,
-  author = {Greg Linden and Brent Smith and Jeremy York},
-  title  = {Amazon.com Recommendations Item-to-Item Collaborative Filtering},
-  year   = {2003},
+  author  = {Greg Linden and Brent Smith and Jeremy York},
+  title   = {Amazon.com Recommendations Item-to-Item Collaborative Filtering},
+  journal = {IEEE Internet Computing},
+  year    = {2003},
+  pages   = {76-79},
+  month   = jan,
 }
 
 @Article{Krawiec2017,
