--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -3,7 +3,7 @@
 \input{format/i523}
 
 \begin{document}
-\title{Big Data's influence on ecommerce and lifestyle}
+\title{Big Data's Influence on Ecommerce and Lifestyle}
 
 
 \author{Geng Niu}
