replace done with DONE so it compiles

--- a/paper1/issues.tex
+++ b/paper1/issues.tex
@@ -4,17 +4,17 @@
 \subsection{Formatting}
 
     \DONE{Incorrect number of keywords or HID and i523 not included in the keywords}
-    \done{False positive Warning--no key, author, or editor in 2008}
-    \done{False positive Warning--no author, editor, organization, or key in 2008}
-    \done{False positive Warning--to sort, need author, editor, or key in 2008}
-    \done{False positive Warning--no key, author, or editor in 2008}
-    \done{False positive Warning--no key, author, or editor in 2008}
-    \done{False positive Warning--no key, author, or editor in 2008}
-    \done{False positive Warning--no author, editor, organization, or key in 2008}
-    \done{False positive Warning--neither author and editor supplied for 2008}
-    \done{False positive Warning--no journal in 2008}
-    \done{False positive Warning--no number and no volume in 2008}
-    \done{False positive Warning--page numbers missing in both pages and numpages fields in 2008}
+    \DONE{False positive Warning--no key, author, or editor in 2008}
+    \DONE{False positive Warning--no author, editor, organization, or key in 2008}
+    \DONE{False positive Warning--to sort, need author, editor, or key in 2008}
+    \DONE{False positive Warning--no key, author, or editor in 2008}
+    \DONE{False positive Warning--no key, author, or editor in 2008}
+    \DONE{False positive Warning--no key, author, or editor in 2008}
+    \DONE{False positive Warning--no author, editor, organization, or key in 2008}
+    \DONE{False positive Warning--neither author and editor supplied for 2008}
+    \DONE{False positive Warning--no journal in 2008}
+    \DONE{False positive Warning--no number and no volume in 2008}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in 2008}
     \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Akter2016}
     \todo[inline]{Warning--no journal in Bertulli2017}
     \todo[inline]{Warning--no number and no volume in Bertulli2017}
