--- a/paper1/issues.tex
+++ b/paper1/issues.tex
@@ -3,7 +3,7 @@
 
 \subsection{Formatting}
 
-    \DONE{Incorrect number of keywords or HID and i523 not included in the keywords}
+    \DONE{Incorrect number of keywords or HID and i523 not included in the keywords: add hid and class number}
     \DONE{False positive Warning--no key, author, or editor in 2008}
     \DONE{False positive Warning--no author, editor, organization, or key in 2008}
     \DONE{False positive Warning--to sort, need author, editor, or key in 2008}
@@ -15,34 +15,34 @@
     \DONE{False positive Warning--no journal in 2008}
     \DONE{False positive Warning--no number and no volume in 2008}
     \DONE{False positive Warning--page numbers missing in both pages and numpages fields in 2008}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Akter2016}
-    \todo[inline]{Warning--no journal in Bertulli2017}
-    \todo[inline]{Warning--no number and no volume in Bertulli2017}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Bertulli2017}
-    \todo[inline]{Warning--no journal in Chen2012}
-    \todo[inline]{Warning--no number and no volume in Chen2012}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Chen2012}
-    \todo[inline]{Warning--no journal in Edosio2014}
-    \todo[inline]{Warning--no number and no volume in Edosio2014}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Edosio2014}
-    \todo[inline]{Warning--no journal in Krawiec2017}
-    \todo[inline]{Warning--no number and no volume in Krawiec2017}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Krawiec2017}
-    \todo[inline]{Warning--no journal in Linden2003}
-    \todo[inline]{Warning--no number and no volume in Linden2003}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Linden2003}
-    \todo[inline]{Warning--no journal in Patranabish2016}
-    \todo[inline]{Warning--no number and no volume in Patranabish2016}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Patranabish2016}
-    \todo[inline]{Warning--no journal in Smyth2015}
-    \todo[inline]{Warning--no number and no volume in Smyth2015}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Smyth2015}
-    \todo[inline]{Warning--no journal in Wikipedia2017}
-    \todo[inline]{Warning--no number and no volume in Wikipedia2017}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Wikipedia2017}
-    \todo[inline]{Warning--no journal in Wikipedia2017a}
-    \todo[inline]{Warning--no number and no volume in Wikipedia2017a}
-    \todo[inline]{Warning--page numbers missing in both pages and numpages fields in Wikipedia2017a}
+    \DONE{Warning--page numbers missing in both pages and numpages fields in Akter2016: add page numbers}
+    \DONE{False positive Warning--no journal in Bertulli2017}
+    \DONE{False positive Warning--no number and no volume in Bertulli2017}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Bertulli2017}
+    \DONE{Warning--no journal in Chen2012:add journal}
+    \DONE{Warning--no number and no volume in Chen2012: add number and volume}
+    \DONE{Warning--page numbers missing in both pages and numpages fields in Chen2012: add page number}
+    \DONE{Warning--no journal in Edosio2014}
+    \DONE{False positive Warning--no number and no volume in Edosio2014}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Edosio2014}
+    \DONE{False positive Warning--no journal in Krawiec2017}
+    \DONE{False positive Warning--no number and no volume in Krawiec2017}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Krawiec2017}
+    \DONE{Warning--no journal in Linden2003: added journal}
+    \DONE{False positive Warning--no number and no volume in Linden2003}
+    \DONE{Warning--page numbers missing in both pages and numpages fields in Linden2003: added page number}
+    \DONE{False positive Warning--no journal in Patranabish2016}
+    \DONE{False positive Warning--no number and no volume in Patranabish2016}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Patranabish2016}
+    \DONE{False positive Warning--no journal in Smyth2015}
+    \DONE{False positive Warning--no number and no volume in Smyth2015}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Smyth2015}
+    \DONE{False positive Warning--no journal in Wikipedia2017}
+    \DONE{False positive Warning--no number and no volume in Wikipedia2017}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Wikipedia2017}
+    \DONE{False positive Warning--no journal in Wikipedia2017a}
+    \DONE{False positive Warning--no number and no volume in Wikipedia2017a}
+    \DONE{False positive Warning--page numbers missing in both pages and numpages fields in Wikipedia2017a}
     
    
 
